# Pianist

./: .gitignore  README.md  pyproject.toml
source/pianist/: pyproject.toml  setup.py
source/pianist/config/: extension.toml
source/pianist/data/assets/piano/urdf/: piano.urdf  piano.xml
source/pianist/data/assets/piano/usd/: .asset_hash  config.yaml  piano.usd
source/pianist/data/assets/piano/usd/configuration/: piano_base.usd  piano_physics.usd  piano_robot.usd  piano_sensor.usd
source/pianist/data/robots/shadow_hand/urdf/: shadow_hand_left_translation.urdf  shadow_hand_right_translation.urdf
source/pianist/data/robots/shadow_hand/usd/: .asset_hash  config.yaml  left_hand.usd  left_hand_translation.usd  right_hand_translation.usd
source/pianist/data/robots/shadow_hand/usd/configuration/: left_hand_base.usd  left_hand_physics.usd  left_hand_robot.usd  left_hand_translation_base.usd  left_hand_translation_physics.usd  (+6 more)
source/pianist/pianist/: __init__.py  ui_extension_example.py
source/pianist/pianist/assets/: piano.py  piano_articulation.py  piano_cfg.py  piano_constants.py
source/pianist/pianist/music/: constants.py  midi_file.py  song_sequence.py  synthesizer.py
source/pianist/pianist/robots/: shadow_hand.py
source/pianist/pianist/tasks/locomotion/velocity/: velocity_env_cfg.py
source/pianist/pianist/tasks/manipulation/: __init__.py
source/pianist/pianist/tasks/manipulation/inhand/: inhand_env.py
source/pianist/pianist/tasks/manipulation/piano/: piano_env.py
source/pianist/pianist/tasks/manipulation/shadow_hand/: __init__.py  cfg.py
(+34 files in other folders)
