[project]
name = "pianist"
version = "0.1.0"
description = "Pianist"
requires-python = ">=3.11,<3.12"
license = "MIT"
authors = [
  { name = "-T.K.-" },
]
dependencies = [
  "torch==2.7.0",
  "torchvision==0.22.0",
  "isaacsim[all,extscache]==5.0.0",
  "isaaclab[isaacsim,all]==2.2.0",
  "mujoco>=3.1.1",
  "mujoco_utils>=0.0.6",
  "dm_control>=1.0.16",
  "mido[ports-rtmidi]",
  "wandb"
]

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"
